# paper2code-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Tutorial.md  config.toml  guide.md
examples/: README.md
examples/python_client/: example.py  paper2code_client.py  requirements.txt
examples/typescript_client/: README.md  package.json  tsconfig.json
examples/typescript_client/src/: example.ts  paper2code.ts
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/code/: domain_aware_generator.rs  domain_aware_generator_test.rs  generator.rs  mod.rs  writer.rs
src/llm/: client.rs  domain_prompts.rs  domain_prompts_test.rs  mod.rs  prompt.rs  strategy.rs
src/pdf/: extractor.rs  mod.rs  parser.rs
src/text/: code_detector.rs  domain_detector.rs  domain_detector_test.rs  mod.rs  processor.rs
src/utils/: concurrency.rs  error_recovery.rs  gamification.rs  helpers.rs  mod.rs  performance.rs  performance_optimizations.rs
tests/: llm_tests.rs  pdf_tests.rs  text_tests.rs
tests/fixtures/: sample_code.py
